[package]
name = "guit"
version = "0.1.1"
edition = "2021"
license = "MIT"
repository = "https://github.com/anarute/guit"
description = "Pacote que permite usar um subset de comandos do git em português."

[dev-dependencies]
assert_cmd = "2.0.14"
predicates = "3.1.0"

[[test]]
name = "tests"
path = "tests/tests.rs"
